welcome.lessons.welcome.loopdowhile.Poucet2.scala.code
var FoundBaggles:Int=0
while (sortieTrouvee()==false) 
{
  do {avance();if (estSurBiscuit()) {FoundBaggles=FoundBaggles+1}}
  if (FoundBaggles<3) {droite();FoundBaggles=0}
	else {gauche();FoundBaggles=0}
  
} while (!crossing())
avance()